--- a/Flipkart Reviews Sentiment Analysis/main.ipynb
+++ b/Flipkart Reviews Sentiment Analysis/main.ipynb
@@ -507,9 +507,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tf27gpu",
+   "display_name": "ds38",
    "language": "python",
-   "name": "tf27gpu"
+   "name": "ds38"
   },
   "language_info": {
    "codemirror_mode": {
@@ -521,7 +521,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.15"
+   "version": "3.8.16"
   }
  },
  "nbformat": 4,
