--- a/iris/training.ipynb
+++ b/iris/training.ipynb
@@ -461,6 +461,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c4c18a1d-1b1c-43b9-9dc6-cd041cbac4d9",
+   "metadata": {},
+   "source": [
+    "# Classification model list\n",
+    "\n",
+    "    Logistic Regression\n",
+    "    k-Nearest Neighbors (k-NN)\n",
+    "    Support Vector Machines (SVM)\n",
+    "    Decision Trees\n",
+    "    Random Forest\n",
+    "    Gradient Boosting (e.g., XGBoost, LightGBM)\n",
+    "    Naive Bayes\n",
+    "    Neural Networks\n",
+    "    Linear Discriminant Analysis (LDA)\n",
+    "    Quadratic Discriminant Analysis (QDA)\n",
+    "    Gaussian Process Classification\n",
+    "    Hidden Markov Models (HMMs)\n",
+    "    Nearest Centroid\n",
+    "    Perceptron\n",
+    "    Ridge Classifier\n",
+    "    Passive-Aggressive Classifier\n",
+    "    One-Class SVM\n",
+    "    Multiclass Support Vector Machines\n",
+    "    Ensemble Methods (e.g., Voting Classifier)\n",
+    "    Rule-Based Classifiers (e.g., RIPPER, C4.5)\n",
+    "    Nearest Mean Classifier"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 51,
    "id": "95e83792-bdb7-4e38-a041-6064b946981d",
